[package]
name = "shadower"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "A simple CLI utility to add rounded borders, padding, and shadows to images."
repository = "https://github.com/n3oney/shadower"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
skia-safe = "0.97.2"
clap = { version = "4.6.1", features = [ "derive" ] }
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"]}
dirs = "6.0.0"
envmnt = "0.10.4"
thiserror = "2.0.18"
